--- a/app/src/main/res/layout/activity_business.xml
+++ b/app/src/main/res/layout/activity_business.xml
@@ -100,6 +100,7 @@
                     android:textStyle="bold" />
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/business_join_name_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_16dp"
@@ -108,6 +109,7 @@
                     android:layout_marginTop="@dimen/margin_8dp">
 
                     <android.support.design.widget.TextInputEditText
+                        android:id="@+id/business_join_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="商铺名称"
@@ -136,6 +138,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <android.support.v7.widget.AppCompatSpinner
+                        android:id="@+id/business_join_class"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
@@ -170,6 +173,7 @@
                     android:layout_marginTop="@dimen/margin_8dp">
 
                     <TextView
+                        android:id="@+id/textView4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -185,13 +189,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
-                        android:layout_marginTop="8dp"
                         android:gravity="center"
                         android:lines="2"
                         android:maxWidth="211dp"
                         android:text="点击地图选点"
+                        app:layout_constraintBottom_toBottomOf="@+id/textView4"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
                     <ImageView
                         android:id="@+id/business_join_introduce_addres_image"
@@ -245,15 +249,27 @@
                         android:id="@+id/business_join_introduce_time_textView_title"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_marginBottom="8dp"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
                         android:text="营业时段"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="@+id/textView"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="@+id/textView" />
+
+                    <TextView
+                        android:id="@+id/business_join_introduce_time_textView_title_note"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
+                        android:text="请至少选择一个营业时间段"
+                        android:textSize="11sp"
+                        android:textColor="@color/colorAccent"
+                        app:layout_constraintBottom_toBottomOf="@+id/textView"
+                        app:layout_constraintEnd_toStartOf="@+id/business_join_introduce_time_textView_number"
+                        app:layout_constraintStart_toEndOf="@+id/business_join_introduce_time_textView_title"
+                        app:layout_constraintTop_toTopOf="@+id/textView" />
 
                     <TextView
                         android:id="@+id/business_join_introduce_time_textView_number"
@@ -401,7 +417,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <android.support.design.widget.TextInputLayout
-                        android:id="@+id/business_join_introduce_content_TextInputLayout_person"
+                        android:id="@+id/business_join_introduce_content_TextInputLayout_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
@@ -412,6 +428,25 @@
                         app:layout_constraintTop_toBottomOf="@+id/business_join_introduce_content_textView_title">
 
                         <android.support.design.widget.TextInputEditText
+                            android:id="@+id/business_telephone_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="联系人称呼（例：高先生、王女士）"
+                            android:lines="1" />
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/business_join_introduce_content_TextInputLayout_person"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/business_join_introduce_content_TextInputLayout_name">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/business_telephone1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="联系方式（手机或座机）"
@@ -432,6 +467,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/business_join_introduce_content_TextInputLayout_person">
 
                         <android.support.design.widget.TextInputEditText
+                            android:id="@+id/business_telephone2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="备用号码（可选）"
@@ -466,8 +502,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/margin_8dp"
-                android:orientation="vertical"
-                android:visibility="gone">
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -478,6 +513,7 @@
                     android:textStyle="bold" />
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/business_join_desk_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_16dp"
@@ -486,6 +522,7 @@
                     android:layout_marginTop="@dimen/margin_8dp">
 
                     <android.support.design.widget.TextInputEditText
+                        android:id="@+id/business_join_desk_num"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="组局桌数（由桌子、包厢决定）"
@@ -493,6 +530,7 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/business_join_maxpeople_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_16dp"
@@ -501,6 +539,7 @@
                     android:layout_marginTop="@dimen/margin_8dp">
 
                     <android.support.design.widget.TextInputEditText
+                        android:id="@+id/business_join_maxpeople_num"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="支持游戏玩家最大数（包场情况下人数）"
@@ -648,6 +687,7 @@
                 </LinearLayout>
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/business_join_extra_storeinfo_TextInputLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/margin_16dp"
@@ -656,6 +696,7 @@
                     android:layout_marginTop="@dimen/margin_8dp">
 
                     <android.support.design.widget.TextInputEditText
+                        android:id="@+id/business_join_extra_storeinfo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="备注（300字以内）" />
