--- a/app/src/main/res/layout/activity_business.xml
+++ b/app/src/main/res/layout/activity_business.xml
@@ -86,10 +86,10 @@
                 android:id="@+id/business_join_introduce_part2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/margin_8dp"
                 android:layout_marginBottom="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/margin_8dp"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -125,6 +125,7 @@
                     android:layout_marginTop="@dimen/margin_8dp">
 
                     <TextView
+                        android:id="@+id/textView5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
@@ -139,10 +140,10 @@
 
                     <android.support.v7.widget.AppCompatSpinner
                         android:id="@+id/business_join_class"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
-                        android:layout_marginEnd="0dp"
+                        android:layout_marginStart="32dp"
                         android:layout_marginTop="8dp"
                         android:entries="@array/business_class_array"
                         android:gravity="end"
@@ -150,6 +151,7 @@
                         android:spinnerMode="dialog"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/textView5"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
@@ -264,8 +266,8 @@
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
                         android:text="请至少选择一个营业时间段"
-                        android:textSize="11sp"
                         android:textColor="@color/colorAccent"
+                        android:textSize="11sp"
                         app:layout_constraintBottom_toBottomOf="@+id/textView"
                         app:layout_constraintEnd_toStartOf="@+id/business_join_introduce_time_textView_number"
                         app:layout_constraintStart_toEndOf="@+id/business_join_introduce_time_textView_title"
@@ -502,7 +504,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/margin_8dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="visible">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -730,10 +733,9 @@
                 android:id="@+id/business_join_introduce_part4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/margin_8dp"
                 android:layout_marginBottom="@dimen/margin_16dp"
-                android:orientation="vertical"
-                android:visibility="gone">
+                android:layout_marginTop="@dimen/margin_8dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -791,9 +793,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:text="必须能看见完整的牌匾和门框。"
-                        android:maxWidth="160dp"
                         android:lines="2"
+                        android:maxWidth="160dp"
+                        android:text="必须能看见完整的牌匾和门框。"
                         android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="@+id/business_join_map_store_title_1"
                         app:layout_constraintTop_toBottomOf="@+id/business_join_map_store_title_1" />
@@ -813,10 +815,12 @@
 
                     <ImageView
                         android:id="@+id/business_join_map_image_store_1"
-                        android:layout_width="66dp"
-                        android:layout_height="66dp"
+                        android:layout_width="0dp"
+                        android:layout_height="120dp"
+                        android:layout_marginEnd="16dp"
                         android:layout_marginTop="8dp"
                         android:src="@drawable/map_add"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/business_join_map_store_title_info_1"
                         app:layout_constraintTop_toBottomOf="@+id/business_join_map_store_title_info_1" />
 
@@ -879,10 +883,12 @@
 
                     <ImageView
                         android:id="@+id/business_join_map_image_store_2"
-                        android:layout_width="66dp"
-                        android:layout_height="66dp"
+                        android:layout_width="0dp"
+                        android:layout_height="120dp"
+                        android:layout_marginEnd="16dp"
                         android:layout_marginTop="8dp"
                         android:src="@drawable/map_add"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/business_join_map_store_title_info_2"
                         app:layout_constraintTop_toBottomOf="@+id/business_join_map_store_title_info_2" />
 
@@ -921,14 +927,15 @@
                         app:layout_constraintBottom_toBottomOf="@+id/business_join_map_store_title_3"
                         app:layout_constraintStart_toEndOf="@+id/business_join_map_store_title_3"
                         app:layout_constraintTop_toTopOf="@+id/business_join_map_store_title_3" />
+
                     <TextView
                         android:id="@+id/business_join_map_store_title_info_3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:text="展示提供给客人组局的整个桌面。"
-                        android:maxWidth="160dp"
                         android:lines="2"
+                        android:maxWidth="160dp"
+                        android:text="展示提供给客人组局的整个桌面。"
                         android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="@+id/business_join_map_store_title_3"
                         app:layout_constraintTop_toBottomOf="@+id/business_join_map_store_title_3" />
@@ -948,10 +955,12 @@
 
                     <ImageView
                         android:id="@+id/business_join_map_image_store_3"
-                        android:layout_width="66dp"
-                        android:layout_height="66dp"
+                        android:layout_width="0dp"
+                        android:layout_height="120dp"
+                        android:layout_marginEnd="16dp"
                         android:layout_marginTop="8dp"
                         android:src="@drawable/map_add"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/business_join_map_store_title_info_3"
                         app:layout_constraintTop_toBottomOf="@+id/business_join_map_store_title_info_3" />
 
@@ -990,14 +999,15 @@
                         app:layout_constraintBottom_toBottomOf="@+id/business_join_map_store_title_4"
                         app:layout_constraintStart_toEndOf="@+id/business_join_map_store_title_4"
                         app:layout_constraintTop_toTopOf="@+id/business_join_map_store_title_4" />
+
                     <TextView
                         android:id="@+id/business_join_map_store_title_info_4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:text="展示提供给客人组局的座椅照片。"
-                        android:maxWidth="160dp"
                         android:lines="2"
+                        android:maxWidth="160dp"
+                        android:text="展示提供给客人组局的座椅照片。"
                         android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="@+id/business_join_map_store_title_4"
                         app:layout_constraintTop_toBottomOf="@+id/business_join_map_store_title_4" />
@@ -1017,10 +1027,12 @@
 
                     <ImageView
                         android:id="@+id/business_join_map_image_store_4"
-                        android:layout_width="66dp"
-                        android:layout_height="66dp"
+                        android:layout_width="0dp"
+                        android:layout_height="120dp"
+                        android:layout_marginEnd="16dp"
                         android:layout_marginTop="8dp"
                         android:src="@drawable/map_add"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/business_join_map_store_title_info_4"
                         app:layout_constraintTop_toBottomOf="@+id/business_join_map_store_title_info_4" />
 
@@ -1090,13 +1102,14 @@
                         app:layout_constraintBottom_toBottomOf="@+id/business_join_map_license_title_1"
                         app:layout_constraintStart_toEndOf="@+id/business_join_map_license_title_1"
                         app:layout_constraintTop_toTopOf="@+id/business_join_map_license_title_1" />
+
                     <TextView
                         android:id="@+id/business_join_map_license_title_info_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:maxWidth="160dp"
                         android:lines="2"
+                        android:maxWidth="160dp"
                         android:text="需文字清晰、边框完整、露出国徽。"
                         android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="@+id/business_join_map_license_title_1"
@@ -1117,10 +1130,12 @@
 
                     <ImageView
                         android:id="@+id/business_join_map_image_license_1"
-                        android:layout_width="66dp"
-                        android:layout_height="66dp"
+                        android:layout_width="0dp"
+                        android:layout_height="120dp"
+                        android:layout_marginEnd="16dp"
                         android:layout_marginTop="8dp"
                         android:src="@drawable/map_add"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/business_join_map_license_title_info_1"
                         app:layout_constraintTop_toBottomOf="@+id/business_join_map_license_title_info_1" />
 
@@ -1157,13 +1172,14 @@
                         app:layout_constraintBottom_toBottomOf="@+id/business_join_map_license_title_2"
                         app:layout_constraintStart_toEndOf="@+id/business_join_map_license_title_2"
                         app:layout_constraintTop_toTopOf="@+id/business_join_map_license_title_2" />
+
                     <TextView
                         android:id="@+id/business_join_map_license_title_info_2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:maxWidth="160dp"
                         android:lines="2"
+                        android:maxWidth="160dp"
                         android:text="需清晰展示无关和文字信息，不可自拍，不可只拍身份证。"
                         android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="@+id/business_join_map_license_title_2"
@@ -1184,10 +1200,12 @@
 
                     <ImageView
                         android:id="@+id/business_join_map_image_license_2"
-                        android:layout_width="66dp"
-                        android:layout_height="66dp"
+                        android:layout_width="0dp"
+                        android:layout_height="120dp"
+                        android:layout_marginEnd="16dp"
                         android:layout_marginTop="8dp"
                         android:src="@drawable/map_add"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/business_join_map_license_title_info_2"
                         app:layout_constraintTop_toBottomOf="@+id/business_join_map_license_title_info_2" />
 
@@ -1225,15 +1243,16 @@
                         app:layout_constraintBottom_toBottomOf="@+id/business_join_map_license_title_3"
                         app:layout_constraintStart_toEndOf="@+id/business_join_map_license_title_3"
                         app:layout_constraintTop_toTopOf="@+id/business_join_map_license_title_3" />
+
                     <TextView
                         android:id="@+id/business_join_map_license_title_info_3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
+                        android:lines="2"
+                        android:maxWidth="160dp"
                         android:text="需文字清晰、边框完整。可用食品流通许可证代替。"
                         android:textSize="13sp"
-                        android:maxWidth="160dp"
-                        android:lines="2"
                         app:layout_constraintStart_toStartOf="@+id/business_join_map_license_title_3"
                         app:layout_constraintTop_toBottomOf="@+id/business_join_map_license_title_3" />
 
@@ -1252,10 +1271,12 @@
 
                     <ImageView
                         android:id="@+id/business_join_map_image_license_3"
-                        android:layout_width="66dp"
-                        android:layout_height="66dp"
+                        android:layout_width="0dp"
+                        android:layout_height="120dp"
+                        android:layout_marginEnd="16dp"
                         android:layout_marginTop="8dp"
                         android:src="@drawable/map_add"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/business_join_map_license_title_info_3"
                         app:layout_constraintTop_toBottomOf="@+id/business_join_map_license_title_info_3" />
 
@@ -1290,6 +1311,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">>
+
                     <Button
                         android:id="@+id/business_join_map_image_back"
                         android:layout_width="wrap_content"
@@ -1312,27 +1334,32 @@
                 android:id="@+id/business_join_introduce_part5"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"></LinearLayout>
+                android:orientation="vertical"
+                android:visibility="gone">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">>
-                <Button
-                    android:id="@+id/business_join_map_end_back"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="上一步" />
+                    <Button
+                        android:id="@+id/business_join_map_end_back"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="上一步" />
 
-                <Button
-                    android:id="@+id/business_join_map_end_next"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="完成" />
+                    <Button
+                        android:id="@+id/business_join_map_end_next"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="完成" />
+                </LinearLayout>
+
             </LinearLayout>
+
+
         </LinearLayout>
     </ScrollView>
 
