--- a/app/src/main/res/layout/activity_game_info.xml
+++ b/app/src/main/res/layout/activity_game_info.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="renchaigao.com.zujuba.Activity.GameInfoActivity">
+    tools:context="renchaigao.com.zujuba.Activity.GamePart.GameInfoActivity">
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/role_nestedScorellView"
