--- a/app/src/main/res/layout/activity_game_world.xml
+++ b/app/src/main/res/layout/activity_game_world.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="renchaigao.com.zujuba.Activity.GameWorldActivity">
+    tools:context="renchaigao.com.zujuba.Activity.GamePart.GameWorldActivity">
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/role_nestedScorellView"
