--- a/app/src/main/res/layout/card_message_info.xml
+++ b/app/src/main/res/layout/card_message_info.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -18,17 +18,29 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <!--<TextView-->
+            <!--android:id="@+id/message_info_other_content"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="8dp"-->
+            <!--android:layout_marginEnd="8dp"-->
+            <!--android:layout_marginStart="68dp"-->
+            <!--android:text=""-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--app:layout_constraintEnd_toStartOf="@+id/message_info_me"-->
+            <!--app:layout_constraintStart_toStartOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="@+id/message_info_other" />-->
+
         <TextView
             android:id="@+id/message_info_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:text="消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定消息测试内容，长度不定"
+            android:layout_marginEnd="68dp"
+            android:layout_marginStart="68dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/message_info_me"
-            app:layout_constraintStart_toEndOf="@+id/message_info_other"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/message_info_other" />
 
         <ImageView
@@ -38,6 +50,6 @@
             android:layout_marginEnd="8dp"
             android:src="@drawable/girl"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/message_info_content" />
+            app:layout_constraintTop_toTopOf="@+id/message_info_other" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
