--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -14,13 +14,13 @@
         <TextView
             android:id="@+id/message_notes"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="message" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/message_RecyclerView_People"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
     </LinearLayout>
     <!-- TODO: Update blank fragment layout -->
